# axwhizee.github.io

./: AI News Crawler V2.py  AI News Crawler.py  AI_News_Crawler.py  Deploy Workflow.yaml  Email_Sender.py  README.md  _config.yml  about.md  feed.xml  index.html  index.md  pyproject.toml  requirement.txt  requirements.txt  说明文档.md
.github/workflows/: weekly_email.yml  weekly_update.yml
_includes/: footer.html
_layouts/: default.html  posts.html
_posts/: 2025-12-08-Post.md  2025-12-08-title.md  2025-12-09-template.html  2026-02-12-Post.md  2026-02-14-Post.md  2026-02-15-Post.md  2026-02-23-Post.md  2026-03-01-Post.md  2026-03-08-Post.md  2026-03-16-Post.md  2026-03-23-Post.md  2026-03-30-Post.md  2026-04-06-Post.md  2026-04-13-Post.md  2026-04-20-Post.md  2026-04-27-Post.md  2026-05-04-Post.md  2026-05-11-Post.md  2026-05-18-Post.md  2026-05-25-Post.md  2026-06-01-Post.md  2026-06-08-Post.md  2026-06-15-Post.md  2026-06-22-Post.md  2026-06-29-Post.md  _2026-02-12-Post.md
_sass/: main.scss
ai_weekly_update.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
assets/css/: style.scss
