# 现代 Pip 强制要求声明构建后端
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-weekly-update" 
version = "0.1.0"
dependencies = [
    "feedparser>=6.0.0",
    "openai==2.20.0",
    "requests>=2.32.0",
    "chatbot-oai>=0.2.1",
]

[tool.setuptools]
py-modules = ["AI_News_Crawler", "Email_Sender"]
